--- a/slideshow.css
+++ b/slideshow.css
@@ -1,3 +1,12 @@
 body {
     background-color: #D3D3D3;
 }
+
+img {
+    width: auto;
+    height: 300px;
+}
+
+.slide:not(:first-child) {
+    display: none;
+}
